# timesync

./: Cargo.toml  dockerfile  readme.md  test.py
src/: main.rs
