[package]
name = "timesync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
clap = { version = "4.5.17", features = ["derive"] }
